--- a/src/login-page/index.css
+++ b/src/login-page/index.css
@@ -1,4 +1,5 @@
 #body {
+  display: flex;
   margin: 0 auto;
   padding: 0 auto;
   width: 700px;
@@ -17,6 +18,15 @@
   align-items: center;
 }
 #API {
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  align-items: center;
+  flex-direction: row;
+  background-color: whitesmoke;
+}
+#RegisterSpace {
   display: flex;
   flex-direction: column;
   justify-content: center;
